src/components/About.module.css
.about {
  max-width: var(--max-content-width);
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: top;
  justify-content: space-between;
  gap: var(--spacing-standard);
  padding: var(--spacing-standard) 0; /* top-bottom padding */
}

.photoIcon {
  display: flex;
  justify-content: center;
  gap: var(--spacing-standard);
}

.photo {
  height: 250px;
  flex-shrink: 0;
  border-radius: 10px;
  object-fit: cover; /* to prevent stretching */
}

@media (max-width: 768px) {
  .about {
    flex-direction: column;
    text-align: center;
    padding: var(--spacing-standard);
  }

  .photoIcon {
    display: none;
  }
}

